more races added, media query added

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 [b]Seu nome:[/b] {{chardata.charName}}
 
 [b]Atributos -[/b]
-Agilidade: {{chardata.atributos.agilidade}}
-Força: {{chardata.atributos.forca}}
-Destreza: {{chardata.atributos.destreza}}
-Carisma: {{chardata.atributos.carisma}}
-Resistência: {{chardata.atributos.resistencia}}
-Inteligência:{{chardata.atributos.inteligencia}}
+Agilidade: {{chardata.atributos.agilidade}} + {{chardata.atributos.bonusAgilidade}}  
+Força: {{chardata.atributos.forca}} + {{chardata.atributos.bonusForca}}  
+Destreza: {{chardata.atributos.destreza}} + {{chardata.atributos.bonusDestreza}}  
+Carisma: {{chardata.atributos.carisma}} + {{chardata.atributos.bonusCarisma}}  
+Resistência: {{chardata.atributos.resistencia}} + {{chardata.atributos.bonusResistencia}}  
+Inteligência:{{chardata.atributos.inteligencia}} + {{chardata.atributos.bonusInteligencia}} 
 
 [b]Sua idade:[/b]{{chardata.idade}}
 [b]Seu Reino:[/b]{{chardata.reino}}
